--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ out/production/Desktop/GIMP 2.10.38.lnk
 out/production/Desktop/MetaTFT.lnk
 out/production/Desktop/MetaTFT.lnk
 /out
+out/production/Desktop/MetaTFT.lnk
